src/tests/errors/functions/006.ura
// errors/functions/006 — non-void function missing return statement
use "@/header"

fn answer() int:
    x int = 42

main():
    output(answer(), "\n")
