src/tests/errors/functions/006.err
[1m[0;31merror: [0mexpected return statement in function 'answer'
  [1m[34m-->[0m src/tests/errors/functions/006.ura:4:1
  [1m[34m|[0m
[1m[34m4 |[0m fn answer() int:
  [1m[34m|[0m [1;31m^^[0m
[1m[0;31merror: [0munexpected token in expression
  [1m[34m-->[0m src/tests/errors/functions/006.ura:7:1
  [1m[34m|[0m
[1m[34m7 |[0m main():
  [1m[34m|[0m [1;31m^^^^[0m
